<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delivery Type"
                android:textColor="@color/purple_700"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radioGroupDeliveryType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/radioButtonOrderedDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/radio_btn_ordered_delivery" />

                <RadioButton
                    android:id="@+id/radioButtonUnorderedDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/radio_btn_unordered_delivery" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Message Type"
                android:textColor="@color/purple_700"
                android:textSize="18dp" />

            <RadioGroup
                android:id="@+id/radioGroupMsgType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:weightSum="1">

                <RadioButton
                    android:id="@+id/radioButtonType0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/radio_btn_msg_type_0" />

                <RadioButton
                    android:id="@+id/radioButtonType1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/radio_btn_msg_type_1" />

                <RadioButton
                    android:id="@+id/radioButtonType2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/purple_700"
                    android:checked="false"
                    android:text="@string/radio_btn_msg_type_2" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Server"
            android:textColor="@color/purple_700"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinnerServerList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/radio_group_border" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:onClick="btnStartService"
            android:text="@string/btn_start"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:onClick="btnStopService"
            android:text="@string/btn_stop"
            android:textColor="@color/white" />
    </LinearLayout>

    <EditText
        android:id="@+id/textViewStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:hint="@string/textViewStatus"
        android:background="@drawable/radio_group_border"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textAlignment="textStart"
        android:textSize="12dp"
        />

</LinearLayout>